# ReadAndWriteCaffemodel

./: .gitignore  CMakeLists.txt  README.md
src/: Cafmod.cpp  Cafmod.h  main.cpp  processFunction.cpp  processFunction.h
